# attarch

./: .gitignore  CMakeLists.txt  README.md  ScrapeSystemMap.py  attarch.camkes  attarch_cross.camkes  buildLinux.sh  kernel_change.txt  rootkit.cmake  settings.cmake  vm_introspect.camkes
am-cakeml/apps/platAM/: CMakeLists.txt  PlatAM.sml  README.md  hacl_config.h
am-cakeml/apps/userAM/: CMakeLists.txt  ClientTest.sml  CrossVMDispatch.sml  README.md  UserAM.sml  config.cmake
build_scripts/: ScrapeSystemMap.py  dockerfiles.sh  linux.sh  readme.md  shell.nix  startDocker.sh
components/CrossvmInit/: crossvm_init.c
components/FileServer/: .gitignore  CMakeLists.txt  FileSystem.c  FileSystem.h  GenerateFileSystem.py  embed_files.py  file_server.c  readme.md  thinga.c
components/FileServer/FileSystem/: FormalManifest_P0.json  new_file_test.value  test.txt
components/LinuxHandler/: CMakeLists.txt  dataports.c  linux_handling.c
components/Measurement/: .gitignore  CMakeLists.txt  KnownDigests.c  KnownDigests.h  appraisal.c  generated_digests.c  hash.c  hash.h  introspect_component.c  introspection_library.c  readme.md
components/Measurement/IntrospectionLibrary/: AddressTranslation.c  CAmkESFS.c  EvidenceBundle.c  EvidenceBundle.h  IL_AddressTranslation.c  IL_Kernel_Modules.c  IL_Library.c  IL_Struct_Interp.c  IL_Tasks.c  IL_Utils.c  IL_elf_header.c  IL_kernel_modules.c  IL_kernel_rodata.c  IL_library.c  IL_struct_interp.c  IL_task.c  IL_utils.c  IntrospectionLibrary.c  KnownDigests.h  appraisals.c  armv8a.h  elf_header.c  evidence_handling.c  example_task_data_sizes.md  filesystems_base.c  filesystems_postfix.c  generated_digests.c  hash.c  hash.h  kernel_rodata_postfix.c  logging.c  measurementAndAppraisal.c  measurements.c  modules_postfix.c  offset_table.md  readme.md  regime.txt  system_call_table.c  task_crawl_example.txt  task_final.txt  (+2 more)
components/Measurement/IntrospectionLibrary/4.14.y/: AddressTranslation.c  filesystems.c  kernel_modules.c  kernel_rodata.c  library.c
components/Measurement/IntrospectionLibrary/4.19.y/: AddressTranslation.c  elf_header.c  filesystems.c  kernel_modules.c  library.c  shelf.c
components/Measurement/IntrospectionLibrary/4.9.y/: AddressTranslation.c  kernel_modules.c  kernel_rodata.c  library.c  struct_interp.c
components/Measurement/IntrospectionLibrary/4_14_y/: definitions.c  kernel_modules.c  kernel_rodata.c
components/Measurement/IntrospectionLibrary/4_19_y/: filesystems.c  kernel_modules.c  task.c
components/Measurement/IntrospectionLibrary/4_9_y/: definitions.c  kernel_rodata.c  shelf.c  task.c
components/Measurement/IntrospectionLibrary/5.10.y/: AddressTranslation.c  kernel_modules.c  kernel_rodata.c  library.c  task.c
components/Measurement/IntrospectionLibrary/5.15.y/: AddressTranslation.c  kernel_modules.c  kernel_rodata.c  library.c  shelf.c  task.c
components/Measurement/IntrospectionLibrary/5.4.y/: AddressTranslation.c  filesystems.c  kernel_modules.c  kernel_rodata.c  library.c  shelf.c  system_call_table.c  task.c  xarray.c
components/Measurement/IntrospectionLibrary/5_10_y/: definitions.c  filesystems.c  kernel_rodata.c
components/Measurement/IntrospectionLibrary/5_15_y/: definitions.c
components/Measurement/IntrospectionLibrary/5_4_y/: definitions.c  kernel_modules.c  kernel_rodata.c  shelf.c  task.c  xarray.c
components/Measurement/IntrospectionLibrary/6.1.y/: AddressTranslation.c  kernel_modules.c  kernel_rodata.c  library.c  maple_tree_xarray_reqs.c  shelf.c  task.c
components/Measurement/IntrospectionLibrary/6_1_y/: filesystems.c  kernel_modules.c  kernel_rodata.c  maple_tree.c  maple_tree_dump.c  maple_tree_top_level_defs.c  shelf.c  task.c
components/Measurement/IntrospectionLibrary/Linux4-9/: library.c
components/Measurement/IntrospectionLibrary/common/: common.c  elf_header.c  kernel_modules.c  kernel_rodata.c  maple_tree.c  maple_tree_dump.c  maple_tree_validaton.c  task.c  utils.c
components/Measurement/configurations/: armv8a.h  include.h  linux-4.14.314.h  linux-4.19.282.h  linux-4.9.307.h  linux-4.9.397.h  linux-5.10.179.h  linux-5.15.110.h  linux-5.4.242.h  linux-6.1.27.h  linux_definitions.h
components/Measurement/cross_include/: readme.h
components/Measurement/include_gcc_cross/: unwind.h
components/Measurement/include_usr/node/: config.gypi
components/Measurement/include_usr/x86_64-linux-gnu/gnu/: stubs-x32.h
components/Platam/: CMakeLists.txt
components/server_am/: CMakeLists.txt
dataport_src/: CMakeLists.txt  dataport_interface.c  dataport_interface.h  main.c
modules/: CMakeLists.txt
modules/connection/: Makefile
modules/diamorphine/: Makefile  diamorphine.c
modules/poison/: Makefile  adore.c  hypervisor_call.c  informer.c  poison.c
modules/signal/: Makefile  OLD.h  signal.c
modules/temp/: Makefile  temp.c
overlay_files/init_scripts/: cross_vm_module_init  cross_vm_test  introspect_dataport_init  introspect_vm_test
overlay_files/user_am_files/: ClientCvmTermCm.json  FormalManifest_P0.json
project_notes/: AddNonConflictingFiles.py  ChangesToLinuxForDiamorphine.txt  example_successful_appraisal_output.txt  filesystems.txt  notes  read-only-system-map.txt
scripts/: post-sync.py
src/: cross_vm_connection.c  cross_vm_connections.c  domain_schedule.c
timing_results/: AllSix.txt  FileSystemsOnly.txt  InitRDOnly.txt  KernelModulesOnly.txt  NoMeasurements.txt  RodataAndSystemCallTable.txt  RodataOnly.txt  SystemCallTableOnly.txt  TasksOnly.txt  readme.md
